# SimpleAmqpClient

./: CMakeLists.txt
.github/workflows/: cmake.yml
examples/: CMakeLists.txt  amqp_listen.cpp  amqp_listenq.cpp  amqp_producer.cpp  utils.h
src/: AmqpException.cpp  BasicMessage.cpp  Channel.cpp  ChannelImpl.cpp  MessageReturnedException.cpp  Table.cpp  TableImpl.cpp
src/SimpleAmqpClient/: AmqpException.h  AmqpResponseLibraryException.h  BasicMessage.h  Channel.h  ChannelImpl.h  Envelope.h  MessageRejectedException.h  TableImpl.h  Util.h
